--- a/adminlogin.html
+++ b/adminlogin.html
@@ -35,7 +35,7 @@
 					</div>
 
 					<div class="d-flex flex-row align-items-center justify-content-between">
-						<input class="btn"  type="submit" value="Login" name="nesubmit" onclick="processLogin()" >
+						<input class="btn"  type="submit" value="Login" name="nelogin" onclick="processLogin()" >
 
 					</div>
 				</form>
