--- a/studentlogin.html
+++ b/studentlogin.html
@@ -33,7 +33,7 @@
 					</div>
 
 					<div class="d-flex flex-row align-items-center justify-content-between">
-						<input class="btn"  type="submit" value="Login" name="nssubmit" onclick="processLogin()" >
+						<input class="btn"  type="submit" value="Login" name="nslogin" onclick="processLogin()" >
 
 					</div>
 				</form>
