--- a/registrationform.html
+++ b/registrationform.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="settings/reset.css">
 	<link rel="stylesheet" href="settings/styles.css" />
 	<link rel="stylesheet" href="settings/formsstyles.css" />
-	<title>Administrator&nbsp;site&nbsp;login</title>
+	<title>Course&nbsp;registration&nbsp;site</title>
 </head>
 <body>
 
@@ -14,19 +14,14 @@
 	<h2>Register for courses</h2>
 	<h2></h2>
 </div>
-
-
-
-
-
-
-
-
-<form action="home.html" target="_self">
-<input class="btn-primary" type="submit" value="Logout" onclick="endsession()">
-</form>
-
-
+<div class="navbar">
+	<a  href="home.html" onclick="processLogout()" >Home</a>
 </div>
-</div>
+
+
+
+
+
+
+
 </body>
