--- a/newemployee.html
+++ b/newemployee.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html dir="ltr" lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="settings/reset.css">
-    <link rel="stylesheet" href="settings/styles.css" />
-    <link rel="stylesheet" href="settings/formsstyles.css" />
+    <link href="settings/reset.css" rel="stylesheet">
+    <link href="settings/styles.css" rel="stylesheet"/>
+    <link href="settings/formsstyles.css" rel="stylesheet"/>
     <title>New&nbsp;employee&nbsp;account</title>
 </head>
 <body>
@@ -15,76 +15,90 @@
     <h2></h2>
 </div>
 <div class="navbar">
-    <a class= "right" href="home.html" >Home</a>
+    <a href="home.html">Home</a>
 </div>
 
-<div class="container " >
+<div class="content-section wf-section">
+    <div class="content-wrapper w-container">
 
 
-                <form  action="reports.html" target="_self">
-                    <div class="row">
-                        <div class="side ">
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="nename" required placeholder="Name" name="nename">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="nelastname" required placeholder="Last Name">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="nemployeeid" required placeholder="Enter your employee ID">
-                            </div>
-
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="neestreetnumber" pattern="[0-9]{1,5}" required placeholder="Street number">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="nestreetname" pattern="[0-9]{1,5}" required placeholder="Street name">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="necity"  required placeholder="City">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="neprovince"  required placeholder="Province">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="nepostalcode" pattern="[A-Z][1-9][A-Z] [1-9][A-Z][1-9]" required placeholder="Postal Code">
-                            </div>
-                        </div>
-
-                        <div class=" main">
-                            <div class="form-group">
-                                <input type="email" class="form-control" id="nemail" required placeholder="Email">
-                            </div>
-                            <div class="form-group">
-                                <input type="tel" class="form-control"  pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" id="nephone" required placeholder="Phone number">
-                            </div>
-
-                            <div class="form-group">
-                                <input type="date" class="form-control" required placeholder="Date of birth" id="nedateofbirth">
-                            </div>
-
-                            <div class="form-group">
-                                <input type="password" class="form-control" id="nepassword" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-                                       title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
-                                       required placeholder="Password">
-                            </div>
-<!Note: Compare passwords>
-                            <div class="form-group">
-                                <input type="password" class="form-control" id="neconfirm-password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-                                       title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
-                                       required placeholder="confirm-password">
-                            </div>
-
-
-                            <div class="d-flex flex-row align-items-center justify-content-between">
-                                <input class="btn"  type="submit" value="Login" name="nesubmit" onclick="processLogin()" >
-                    <button class="btn btn-primary" onClick="window.location.href='adminlogin.html';">Cancel</button>
-                            </div>
-                        </div>
+        <form action="reports.html" method="post" target="_self">
+            <div class="row">
+                <div class="side">
+                    <div class="form-group">
+                        <input class="form-control" id="nename" name="nename" placeholder="Name" required type="text">
                     </div>
-                </form>
+                    <div class="form-group">
+                        <input class="form-control" id="nelastname" placeholder="Last Name" required type="text">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" id="nemployeeid" placeholder="Enter your employee ID" required
+                               type="text">
+                    </div>
+
+                    <div class="form-group">
+                        <input class="form-control" id="neestreetnumber" pattern="[0-9]{1,5}"
+                               placeholder="Street number" required
+                               type="text">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" id="nestreetname" placeholder="Street name" required type="text">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" id="necity" placeholder="City" required type="text">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" id="neprovince" placeholder="Province" required type="text">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" id="nepostalcode" pattern="[A-Z][1-9][A-Z] [1-9][A-Z][1-9]"
+                               placeholder="Postal Code" required type="text">
+                    </div>
+                </div>
+
+                <div class="main">
+                    <div class="form-group">
+                        <input class="form-control" id="nemail" placeholder="Email" required type="email">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" id="nephone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}[0-9]{2}"
+                               placeholder="Phone number"
+                               required type="tel">
+                    </div>
+
+                    <div class="form-group">
+                        <input class="form-control" id="nedateofbirth" placeholder="Date of birth" required type="date">
+                    </div>
+
+                    <div class="form-group">
+                        <input class="form-control" id="nepassword" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                               placeholder="Password"
+                               required
+                               title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
+                               type="password">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" id="neconfirm-password"
+                               pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                               placeholder="confirm-password"
+                               required
+                               title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
+                               type="password">
+                    </div>
+
+                    <input onclick="myFunction()" type="checkbox">Show Password
+
+                    <div class="d-flex flex-row align-items-center justify-content-between">
+                        <input class="btn center-box" name="nesubmit" type="submit" value="Save">
+                    </div>
+
+                </div>
+            </div>
+            <button class="btn center-box" onClick="window.location.href='reports.html';">Cancel</button>
+        </form>
 
 
+    </div>
 </div>
-</div>
+<script src="settings/functions.js" type="text/javascript"></script>
 </body>
