--- a/newstudent.html
+++ b/newstudent.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="settings/reset.css">
-    <link rel="stylesheet" href="settings/styles.css" />
-    <link rel="stylesheet" href="settings/formsstyles.css" />
+    <link rel="stylesheet" href="settings/styles.css"/>
+    <link rel="stylesheet" href="settings/formsstyles.css"/>
     <title>New&nbsp;student&nbsp;account</title>
 </head>
 <body>
@@ -15,71 +15,82 @@
     <h2></h2>
 </div>
 <div class="navbar">
-    <a class= "right" href="home.html" >Home</a>
+    <a href="home.html">Home</a>
 </div>
 
-<div class="container " >
+<div class="container">
 
-                <form  action="BusinessLogic.php" method="POST" target="_self">
-                    <div class="row">
-                        <div class="side ">
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="nsname" required placeholder="Name">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="nslastname" required placeholder="Last Name">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="nstudentid" required placeholder="Enter your employee ID">
-                            </div>
+    <form action="BusinessLogic.php" method="POST" target="_self">
+        <div class="row">
+            <div class="side">
 
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="nsestreetnumber" pattern="[0-9]{1,5}" required placeholder="Street number">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="nsstreetname" pattern="[0-9]{1,5}" required placeholder="Street name">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="nscity"  required placeholder="City">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="nsprovince"  required placeholder="Province">
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="nspostalcode" pattern="[A-Z][1-9][A-Z] [1-9][A-Z][1-9]" required placeholder="Postal Code">
-                            </div>
-                        </div>
 
-                        <div class=" main">
-                            <div class="form-group">
-                                <input type="email" class="form-control" id="nsemail" required placeholder="Email">
-                            </div>
-                            <div class="form-group">
-                                <input type="tel" class="form-control"  pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" id="nphone" required placeholder="Phone number">
-                            </div>
+                <div class="form-group">
 
-                            <div class="form-group">
-                                <input type="date" class="form-control" required placeholder="Date of birth" id="nsdateofbirth">
-                            </div>
+                    <input class="form-control" name="nsname" placeholder="Name" required type="text">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" name="nslastname" required placeholder="Last Name">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" name="nstudentname" required
+                           placeholder="Enter your employee name">
+                </div>
 
-                            <div class="form-group">
-                                <input type="password" class="form-control" id="nspassword" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-                                       title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
-                                       required placeholder="Password">
-                            </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" name="nsestreetnumber" pattern="[0-9]{1,5}" required
+                           placeholder="Street number">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" name="nsstreetname" pattern="[0-9]{1,5}" required
+                           placeholder="Street name">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" name="nscity" required placeholder="City">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" name="nsprovince" required placeholder="Province">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" name="nspostalcode"
+                           pattern="[A-Z][1-9][A-Z] [1-9][A-Z][1-9]" required placeholder="Postal Code">
+                </div>
+            </div>
 
-                            <div class="form-group">
-                                <input type="password"  class="form-control" id="nsconfirm-password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-                                       title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
-                                       required placeholder="confirm-password">
-                            </div>
-                            <div class="d-flex flex-row align-items-center justify-content-between">
-                                <input class="btn"  type="submit" value="Login" name="nssubmit" onclick="processLogin()" >
-                            </div>
-                        </div>
-                    </div>
-                </form>
-                    <button class="btn  " onClick="window.location.href='studentlogin.html';">Cancel</button>
+            <div class=" main">
+                <div class="form-group">
+                    <input type="email" class="form-control" name="nsemail" required placeholder="Email">
+                </div>
+                <div class="form-group">
+                    <input type="tel" class="form-control" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" name="nphone" required
+                           placeholder="Phone number">
+                </div>
+
+                <div class="form-group">
+                    <input type="date" class="form-control" required placeholder="Date of birth" name="nsdateofbirth">
+                </div>
+
+                <div class="form-group">
+                    <input type="password" class="form-control" name="nspassword"
+                           pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                           title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
+                           required placeholder="Password">
+                </div>
+
+                <div class="form-group">
+                    <input type="password" class="form-control" name="nsconfirm-password"
+                           pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                           title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
+                           required placeholder="confirm-password">
+                </div>
+                <div class="d-flex flex-row align-items-center justify-content-between">
+
+    <button class="btn center-box " onClick="window.location.href='studentlogin.html';">Cancel</button>
+                </div>
+            </div>
+        </div>
+                    <input class="btn center-box" type="submit" value="Login" name="nssubmit" onclick="processLogin()">
+    </form>
 
 
 </div>
