--- a/newemployee.html
+++ b/newemployee.html
@@ -26,59 +26,59 @@
             <div class="row">
                 <div class="side">
                     <div class="form-group">
-                        <input class="form-control" id="nename" name="nename" placeholder="Name" required type="text">
+                        <input class="form-control" name="nename" placeholder="Name" required type="text">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" id="nelastname" placeholder="Last Name" required type="text">
+                        <input class="form-control" name="nelastname" placeholder="Last Name" required type="text">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" id="nemployeeid" placeholder="Enter your employee ID" required
+                        <input class="form-control" name="nemployeeid" placeholder="Enter your employee ID" required
                                type="text">
                     </div>
 
                     <div class="form-group">
-                        <input class="form-control" id="neestreetnumber" pattern="[0-9]{1,5}"
+                        <input class="form-control" name="neestreetnumber" pattern="[0-9]{1,5}"
                                placeholder="Street number" required
                                type="text">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" id="nestreetname" placeholder="Street name" required type="text">
+                        <input class="form-control" name="nestreetname" placeholder="Street name" required type="text">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" id="necity" placeholder="City" required type="text">
+                        <input class="form-control" name="necity" placeholder="City" required type="text">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" id="neprovince" placeholder="Province" required type="text">
+                        <input class="form-control" name="neprovince" placeholder="Province" required type="text">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" id="nepostalcode" pattern="[A-Z][1-9][A-Z] [1-9][A-Z][1-9]"
+                        <input class="form-control" name="nepostalcode" pattern="[A-Z][1-9][A-Z] [1-9][A-Z][1-9]"
                                placeholder="Postal Code" required type="text">
                     </div>
                 </div>
 
                 <div class="main">
                     <div class="form-group">
-                        <input class="form-control" id="nemail" placeholder="Email" required type="email">
+                        <input class="form-control" name="nemail" placeholder="Email" required type="email">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" id="nephone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}[0-9]{2}"
+                        <input class="form-control" name="nephone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}[0-9]{2}"
                                placeholder="Phone number"
                                required type="tel">
                     </div>
 
                     <div class="form-group">
-                        <input class="form-control" id="nedateofbirth" placeholder="Date of birth" required type="date">
+                        <input class="form-control" name="nedateofbirth" placeholder="Date of birth" required type="date">
                     </div>
 
                     <div class="form-group">
-                        <input class="form-control" id="nepassword" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                        <input class="form-control" name="nepassword" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
                                placeholder="Password"
                                required
                                title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
                                type="password">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" id="neconfirm-password"
+                        <input class="form-control" name="neconfirm-password"
                                pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
                                placeholder="confirm-password"
                                required
