Added example of iframe

--- a/studentcourseload.html
+++ b/studentcourseload.html
@@ -5,19 +5,10 @@
     <link href="settings/reset.css" rel="stylesheet">
     <link href="settings/styles.css" rel="stylesheet"/>
     <link href="settings/formsstyles.css" rel="stylesheet"/>
-    <title>Course&nbsp;registration&nbsp;site</title>
+    <title>Student&nbsp;course&nbsp;load</title>
 </head>
 <body>
 
-<div class="header">
-
-    <h2>Register for courses</h2>
-    <h2></h2>
-</div>
-
-<div class="navbar">
-    <a href="home.html" onclick="processLogout()">Home</a>
-</div>
-
 
 </body>
+</html>
