--- a/newemployee.html
+++ b/newemployee.html
@@ -9,20 +9,12 @@
 </head>
 <body>
 
-<div class="header">
-
-    <h2>Register new employee information</h2>
-    <h2></h2>
-</div>
-<div class="navbar">
-    <a href="home.html">Home</a>
-</div>
 
 <div class="content-section wf-section">
     <div class="content-wrapper w-container">
 
 
-        <form action="reports.html" method="post" target="_self">
+        <form action="adminsite.html" method="post" target="_self">
             <div class="row">
                 <div class="side">
                     <div class="form-group">
