Updated some forms and ids. Cleaned up the iframe look

--- a/newemployee.html
+++ b/newemployee.html
@@ -14,7 +14,7 @@
     <div class="content-wrapper w-container">
 
 
-        <form action="adminsite.html" method="post" target="_self">
+        <form action="BusinessLogic.php" method="post" target="_self">
             <div class="row">
                 <div class="side">
                     <div class="form-group">
@@ -59,7 +59,8 @@
                     </div>
 
                     <div class="form-group">
-                        <input class="form-control" name="nedateofbirth" placeholder="Date of birth" required type="date">
+                        <input class="form-control" name="nedateofbirth" placeholder="Date of birth" required
+                               type="date">
                     </div>
 
                     <div class="form-group">
@@ -86,7 +87,7 @@
 
                 </div>
             </div>
-            <button class="btn center-box" onClick="window.location.href='reports.html';">Cancel</button>
+            <button class="btn center-box" onClick="window.location.href='adminsite.html';">Cancel</button>
         </form>
 
 
