--- a/adminsite.html
+++ b/adminsite.html
@@ -20,19 +20,15 @@
     <a href="newstudent.html" target="myIframeAdmin">New student</a>
 
 </div>
+
+
 <div class="center-box">
-
-
-    <select id="courses" name="courses">
-        <option value="english">english</option>
-        <option value="italian">italian</option>
-        <option value="arab">arab</option>
-    </select>
-
+    <p>Test for space</p>
 </div>
-<p>This is a cheap example. The real frame will be reactive, centered and all the way down</p>
 
-<iframe src="newemployee.html" style="height: available">
+
+<iframe name="myIframeAdmin" src="saveconfirmation.html"
+        style="width: 100%; height: 100%; border: none; height: available ">
 </iframe>
 
 <script src="settings/functions.js" type="text/javascript"></script>
