--- a/newcourse.html
+++ b/newcourse.html
@@ -42,10 +42,10 @@
                 </div>
 
                 <div class="form-group">
-                    <input class="form-control" name="days" pattern="\D*" placeholder="days" required type="date">
+                    <input class="form-control" name="days" pattern="\D*" placeholder="days" required type="text">
                 </div>
                 <div class="form-group">
-                    <input class="form-control" name="time" pattern=[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" placeholder="Time"
+                    <input class="form-control" name="time" placeholder="Time"
                            required type="text">
                 </div>
                 <div class="form-group">
@@ -55,7 +55,7 @@
                     <input class="form-control" name="startDate" placeholder="Start Date" required type="date">
                 </div>
                 <div class="form-group">
-                    <input class="form-control" name="endDate" placeholder="End date" required type="text">
+                    <input class="form-control" name="endDate" placeholder="End date" required type="date">
                 </div>
             </div>
 
@@ -69,7 +69,7 @@
                 </div>
 
                 <div class="form-group">
-                    <input class="form-control" name="langLevel" placeholder="Language level" required type="date">
+                    <input class="form-control" name="langLevel" placeholder="Language level" required type="text">
                 </div>
 
 
