--- a/adminsite.html
+++ b/adminsite.html
@@ -4,21 +4,22 @@
 <head>
     <meta charset="utf-8">
     <link href="settings/styles.css" rel="stylesheet"/>
-    <title>Course&nbsp;reports</title>
+    <title>Administrator&nbsp;site</title>
 </head>
 <body>
 
 <div class="header">
 
-    <h2>Administrator site</h2>
+    <h1>Administrator site</h1>
     <h2></h2>
 </div>
 
 <div class="navbar">
-    <a href="home.html" onclick="processLogout()">Home</a>
-    <a href="newemployee.html" target="myIframeAdmin">New employee</a>
-    <a href="newstudent.html" target="myIframeAdmin">New student</a>
-
+    <a class="right" href="home.html" onclick="processLogout()">Logout</a>
+    <a href="adminsite.html">Reports</a>
+    <a href="newemployee.html">New employee</a>
+    <a href="newstudent.html">New student</a>
+    <a href="newcourse.html">New course</a>
 </div>
 
 
@@ -27,9 +28,11 @@
 </div>
 
 
-<iframe name="myIframeAdmin" src="saveconfirmation.html"
-        style="width: 100%; height: 100%; border: none; height: available ">
+<iframe loading="lazy" name="myIframeAdmin" src="saveconfirmation.html" style="border: none; position: relative;"
+        title="Report display window"
+>
 </iframe>
+
 
 <script src="settings/functions.js" type="text/javascript"></script>
 
