--- a/adminsite.html
+++ b/adminsite.html
@@ -3,15 +3,16 @@
 <html dir="ltr" lang="en">
 <head>
     <meta charset="utf-8">
+    <link href="settings/reset.css" rel="stylesheet">
     <link href="settings/styles.css" rel="stylesheet"/>
+    <link href="settings/formsstyles.css" rel="stylesheet"/>
     <title>Administrator&nbsp;site</title>
 </head>
 <body>
 
 <div class="header">
-
     <h1>Administrator site</h1>
-    <h2></h2>
+    <h2>Reports</h2>
 </div>
 
 <div class="navbar">
@@ -28,7 +29,8 @@
 </div>
 
 
-<iframe loading="lazy" name="myIframeAdmin" src="saveconfirmation.html" style="border: none; position: relative;"
+<iframe loading="lazy" name="myIframeAdmin" src="saveconfirmation.html"
+        style="border: none; position: relative; "
         title="Report display window"
 >
 </iframe>
