--- a/newstudent.html
+++ b/newstudent.html
@@ -21,7 +21,6 @@
     <a href="adminsite.html">Reports</a>
     <a href="newemployee.html">New employee</a>
     <a href="newcourse.html">New course</a>
-
 </div>
 <div class="content-section wf-section">
     <div class="content-wrapper w-container">
@@ -98,7 +97,7 @@
                     </div>
 
 
-                    <input onclick="myFunction()" type="checkbox">Show Password
+                    <input onclick="myFunction()" style="font-size: 14px;" type="checkbox">Show Password
 
                     <div class="d-flex flex-row align-items-center justify-content-between">
                         <input class="btn center-box" name="nssubmit" type="submit" value="Save">
