--- a/saveconfirmation.html
+++ b/saveconfirmation.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link href="settings/reset.css" rel="stylesheet">
     <link href="settings/styles.css" rel="stylesheet"/>
+    <link href="settings/formsstyles.css" rel="stylesheet"/>
     <title>Account created</title>
 </head>
 <body>
